--- a/readme
+++ b/readme
@@ -15,3 +15,5 @@ Platform: BET365 only (Other bookmakers do not support the required leagues).
 Bet Types: Primarily live tips, with recent expansions into pre-match bets.
 Algorithm: My bot uses a sophisticated algorithm that analyzes historical match data. When certain criteria are met, it identifies valuable betting opportunities in live matches.
 Expected Results: Accounts usually start with 300-500 EUR and typically get limited at around 1000-2000 EUR within two weeks, achieving an average of 15% expected value (EV) per bet.
+
+My contact: TG: @smwyoo
