--- a/readme
+++ b/readme
@@ -17,3 +17,6 @@ Algorithm: My bot uses a sophisticated algorithm that analyzes historical match 
 Expected Results: Accounts usually start with 300-500 EUR and typically get limited at around 1000-2000 EUR within two weeks, achieving an average of 15% expected value (EV) per bet.
 
 My contact: TG: @smwyoo
+
+
+![profit1](profit1.jpg)
